<resources>
    <string name="app_name">Good Weather!</string>
    <string name="CHOOSE_CITY">CHOOSE CITY</string>
    <string name="WEATHER_FORECAST">WEATHER FORECAST</string>
    <string name="HOURS_24">24 HOURS</string>
    <string name="DAYS_3">3 DAYS</string>
    <string name="WEEKS_2">2 WEEKS</string>
    <string name="mmhg">mmHg</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind:</string>
    <string name="settings">SETTINGS</string>
    <string name="weekend">WEEKEND</string>
    <string name="next_message">Heavy snow is expected in the next 2 hours</string>
    <string name="set">SAVE</string>
    <string name="or_select_one_below">Or select one below</string>
    <string name="type_city_name_here">Type city name here</string>
    <string name="city_screen">CITY SCREEN</string>
    <string name="show_wind_and_prssure_data">Show wind and prssure data</string>
    <string name="cancel">CANCEL</string>
    <string name="citynametext">City Name required</string>
    <string name="settings_screen">SETTINGS SCREEN</string>
    <string name="set_theme">Set theme:</string>
    <string name="select_theme_first">Select Theme first</string>
    <string name="save_settings">SAVE SETTINGS</string>
    <string name="Save_settings_A">Save settings?</string>
    <string name="Save_A">Save</string>
    <string name="m_s">m/s</string>
    <string name="server_get_data_error">Server connection error</string>
    <string name="no_city_info">City has not found at this time</string>
</resources>