<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/cityTextBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:editable="false"
        android:paddingStart="8dp"
        android:paddingTop="3dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:text="@string/settings_screen"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:text="@string/set_theme"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextBox" />

    <Spinner
        android:id="@+id/settingsTheme"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/stroke_only_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/settingsButtonCancel"
        style="@style/CustomCityButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:onClick="closeActivity"
        android:text="@string/cancel"
        android:textColor="#000000"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsButtonSave"
        app:layout_constraintEnd_toStartOf="@+id/settingsButtonSave"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/settingsButtonSave"
        style="@style/CustomCityButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:onClick="sendResultAndCloseActivity"
        android:text="@string/save_settings"
        android:textColor="#000000"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTheme"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>