<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pasmur_zima"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/stroke_only_round_transparent"
            android:onClick="openSettingsScreen"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/settings"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextLayout" />

        <ImageView
            android:id="@+id/imgSmallRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/weatherImageBig"
            app:layout_constraintStart_toEndOf="@+id/imgSmallCenter"
            app:layout_constraintTop_toTopOf="@+id/imgSmallCenter"
            app:srcCompat="@drawable/kaplya" />

        <ImageView
            android:id="@+id/imgSmallCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/weatherImageBig"
            app:layout_constraintStart_toStartOf="@+id/weatherImageBig"
            app:layout_constraintTop_toBottomOf="@+id/weatherImageBig"
            app:srcCompat="@drawable/snezhinka" />

        <ImageView
            android:id="@+id/imgSmallLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/imgSmallCenter"
            app:layout_constraintStart_toStartOf="@+id/weatherImageBig"
            app:layout_constraintTop_toTopOf="@+id/imgSmallCenter"
            app:srcCompat="@drawable/kaplya" />

        <ImageView
            android:id="@+id/weatherImageBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tempTextBig"
            app:layout_constraintTop_toTopOf="@+id/warningImage"
            app:srcCompat="@drawable/tucha1" />

        <ImageView
            android:id="@+id/warningImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityBtn"
            app:srcCompat="@drawable/gololed" />

        <TextView
            android:id="@+id/tempTextBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="-3"
            android:textAlignment="center"
            android:textSize="90sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warningImage" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hL">

            <TextView
                android:id="@+id/pT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:text="@string/pressure"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pI"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/pI"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/panel_2x_press"
                app:layout_constraintBottom_toBottomOf="@+id/pT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pT" />

            <TextView
                android:id="@+id/pX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="750"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/pI"
                app:layout_constraintStart_toEndOf="@+id/pI"
                app:layout_constraintTop_toTopOf="@+id/pI" />

            <TextView
                android:id="@+id/pY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/mmhg"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/pX"
                app:layout_constraintStart_toEndOf="@+id/pX"
                app:layout_constraintTop_toTopOf="@+id/pX" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tempTextBig">

            <TextView
                android:id="@+id/hT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:text="@string/humidity"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/hI"/>

            <ImageView
                android:id="@+id/hI"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/panel_2x_humid"
                app:layout_constraintBottom_toBottomOf="@+id/hT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hT" />

            <TextView
                android:id="@+id/hX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="90"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/hT"
                app:layout_constraintStart_toEndOf="@+id/hI" />

            <TextView
                android:id="@+id/hY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="%"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/hX"
                app:layout_constraintStart_toEndOf="@+id/hX" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pL">

            <TextView
                android:id="@+id/wT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:text="@string/wind"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/wI"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/wI"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/panel_2x_wind"
                app:layout_constraintBottom_toBottomOf="@+id/wT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/wT" />

            <TextView
                android:id="@+id/wX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="N-W"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/wI"
                app:layout_constraintStart_toEndOf="@+id/wI"
                app:layout_constraintTop_toTopOf="@+id/wI" />

            <TextView
                android:id="@+id/wY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1.0"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/wX"
                app:layout_constraintStart_toEndOf="@+id/wX"
                app:layout_constraintTop_toTopOf="@+id/wX" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/nextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_next"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nextTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/next_message"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/cityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/stroke_only_round_transparent"
            android:onClick="openCityScreen"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/CHOOSE_CITY"
            android:textAlignment="viewEnd"
            android:textColor="#82000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/forecast_header"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="40dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/container2Header"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/WEATHER_FORECAST"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#56CBCDCD"
            app:tabBackground="@color/white"
            app:tabGravity="fill"
            app:tabIndicatorColor="#000000"
            app:tabIndicatorGravity="bottom"
            app:tabSelectedTextColor="#000000"
            app:tabTextColor="#B5B5B5" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>